styles/style.css
* {
  margin: 0; }

body, html {
  color: white;
  font-family: 'Ubuntu', sans-serif;
  font-size: 20px;
  height: 100%;
  font-weight: normal;
  margin: 0;
  padding: 0; }

a, a:link, a:visited, a:hover, a:active {
  color: #efecec;
  text-decoration: none; }

.maintext {
  margin: 0;
  padding: 0 0 0 20px;
  background: #481817;
  -moz-opacity: 0.65;
  -khtml-opacity: 0.65;
  -webkit-opacity: 0.65;
  opacity: 0.65;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=65)";
  filter: "alpha(opacity=65)";
  /* border-top: 2px solid #2A0B0D;
-webkit-border-radius: 5px;
-moz-border-radius: 5px;
border-radius: 5px;  */ }

h1, h2, h3, h4, h5, pre {
  color: white;
  /* #efecec; */
  /* text-shadow: 1px 1px #5f4444, 1px -1px #5f4444, -1px 1px  #5f4444, -1px -1px  #5f4444;	*/ }

p {
  color: white;
  /* #efecec; */
  text-shadow: 1px 1px #5f4444, 1px -1px #5f4444, -1px 1px #5f4444, -1px -1px #5f4444;
  padding: 0 10px 0 0;
  line-height: 1.6;
  letter-spacing: 0.06em;
  font-weight: normal; }

p a, a:link, p a:visited, p a:hover, p a:active {
  color: #efecec;
  text-decoration: underline; }

#container {
  margin: 0px;
  /*10px 10px 10px 10px; */
  padding: 0; }

.wrapper {
  padding: 0;
  min-height: 100%;
  height: auto !important;
  height: 100%;
  margin: 0 auto -4em 0; }

.shout {
  color: #efecec;
  font-size: 42px;
  font-weight: 400;
  text-shadow: 1px 1px #5f4444, 1px -1px #5f4444, -1px 1px #5f4444, -1px -1px #5f4444;
  line-height: 1.8;
  font-family: 'Ubuntu', sans-serif;
  letter-spacing: 0.05em; }

img {
  padding: 0;
  margin: 0; }

.logo {
  padding: 30px 5px 30px 0px;
  margin: 0;
  width: 400px; }

.contact, .contact a, .contact a:hover, .contact a:visited {
  padding: 20px 0 20px 0;
  color: #efecec;
  font-size: 40px; }

.footer, .push {
  height: 4em; }

#footer a {
  padding-right: 12px;
  text-decoration: none; }

.top-bar {
  background-color: #481817;
  -moz-opacity: 0.65;
  -khtml-opacity: 0.65;
  -webkit-opacity: 0.65;
  opacity: 0.65;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=65)";
  filter: "alpha(opacity=65)"; }

.top-bar a, .top-bar a:link, .top-bar a:visited, .top-bar a:hover, .top-bar a:active {
  color: #efecec;
  text-decoration: none; }

#footer {
  border-top: 2px solid #2A0B0D;
  background-color: #481817;
  height: auto;
  border-top: 2px solid #2A0B0D;
  -moz-opacity: 0.65;
  -khtml-opacity: 0.65;
  -webkit-opacity: 0.65;
  opacity: 0.65;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=65)";
  filter: "alpha(opacity=65)";
  /* 	-webkit-border-radius: 5px;
-moz-border-radius: 5px;
border-radius: 5px;  */ }

#footer a, #footer a:hover, #footer a:visited, #footer a:active {
  color: #ffffff;
  font-size: 14px;
  font-weight: 300;
  /* text-shadow: 1px 1px  #5f4444, 1px -1px  #5f4444, -1px 1px  #5f4444, -1px -1px  #5f4444; */
  line-height: 4em;
  vertical-align: bottom;
  font-family: 'Ubuntu', sans-serif;
  letter-spacing: 0.05em; }

#cloudflare-old-browser {
  background: yello;
  opacity: 0.7;
  font-size: 14px; }

#mc_embed_signup {
  background: none;
  clear: left;
  font: 14px Ubuntu, sans-serif; }

#mc_embed_signup form {
  /*display:block*/
  position: relative;
  text-align: left;
  padding: 10px 0 10px 0; }

#mc_embed_signup h2 {
  font-weight: bold;
  padding: 0;
  margin: 15px 0;
  font-size: 1.4em; }

#mc_embed_signup input {
  border: 1px solid #999;
  -webkit-appearance: none; }

#mc_embed_signup input[type=checkbox] {
  -webkit-appearance: checkbox; }

#mc_embed_signup input[type=radio] {
  -webkit-appearance: radio; }

#mc_embed_signup input:focus {
  border-color: #333; }

#mc_embed_signup .button {
  background-color: #ee1c33;
  border: 0 none;
  border-radius: 4px;
  color: #FFFFFF;
  cursor: pointer;
  /*display: inline-block */
  font-size: 20px;
  font-weight: bold;
  height: 46px;
  line-height: 34px;
  margin: 0;
  /* 5px 10px 0 */
  padding: 0;
  text-align: center;
  text-decoration: none;
  vertical-align: top;
  white-space: nowrap;
  width: 60px; }

#mc_embed_signup .button:hover {
  background-color: #f14558; }

#mc_embed_signup .small-meta {
  font-size: 11px; }

#mc_embed_signup .nowrap {
  white-space: nowrap; }

#mc_embed_signup .clear {
  clear: none;
  display: inline; }

#mc_embed_signup label {
  /*display:block*/
  font-size: 20px;
  padding-bottom: 10px;
  font-weight: bold; }

#mc_embed_signup input.email {
  /*display:block*/
  padding: 2px 0;
  margin: 0;
  /*4% 10px 0 */
  text-indent: 5px;
  width: 30%;
  min-width: 100px;
  float: left; }

#mc_embed_signup input.button {
  /*display:block*/
  /* width:35% */
  margin: 0 0 10px 0;
  /* min-width:90px */ }

#mc_embed_signup div#mce-responses {
  float: left;
  top: -1.4em;
  padding: 0em 0.5em 0em 0.5em;
  overflow: hidden;
  width: 90%;
  margin: 0 5%;
  clear: both; }

#mc_embed_signup div.response {
  margin: 1em 0;
  padding: 1em 0.5em 0.5em 0;
  font-weight: bold;
  float: left;
  top: -1.5em;
  z-index: 1;
  width: 80%; }

#mc_embed_signup #mce-error-response {
  display: none; }

#mc_embed_signup #mce-success-response {
  color: #529214;
  display: none; }

#mc_embed_signup label.error {
  display: block;
  float: none;
  width: auto;
  margin-left: 1.05em;
  text-align: left;
  padding: 0.5em 0; }

@media only screen and (max-width: 40em) {
  .shout {
    font-size: 26px;
    letter-spacing: 0.05em;
    line-height: 1.4;
    padding: 10px 10px 10px 0px; }
  .logo {
    margin: 0;
    padding: 10px 0 10px 0;
    width: auto;
    font-size: 80px; }
  .contact {
    padding: 20px 10px 20px 10px;
    color: #efecec;
    font-size: 42px; }
  #mc_embed_signup form {
    padding: 10px 10px 10px 0px; }
  #mc_embed_signup input.email {
    width: 60%; } }

